; view at https://setuptools.pypa.io/en/stable/userguide/declarative_config.html#metadata
[metadata]
keywords = python, pip, setuptools, wheel, twine
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv2
license_files = LICENSE
platforms = any
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3

; view at https://setuptools.pypa.io/en/stable/userguide/declarative_config.html#options
[options]
zip_safe = True
include_package_data = True,
python_requires = >=3.8
install_requires =
    argcomplete
    pip
    toml
    ping3
    tabulate
    setuptools >= 51.0.0
    wheel
    twine
    keyring
    keyrings.alt
packages = find:

[options.entry_points]
console_scripts =
    xpip-version = xpip.version:main
    xpip-build = xpip.builder.build:main
    xpip-upload = xpip.installer.upload:main
    xpip-mirror = xpip.installer.mirror:main

[options.packages.find]
include = xpip*
exclude =
    test

[options.package_data]
xpip.utils.config =
    mirrors.toml
