; view at https://setuptools.pypa.io/en/stable/userguide/declarative_config.html#metadata
[metadata]
license = GPLv2
license_files = LICENSE
platforms = any
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3

; view at https://setuptools.pypa.io/en/stable/userguide/declarative_config.html#options
[options]
zip_safe = True
include_package_data = True,
